deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 3  # Nombre de répliques souhaitées
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: arijchetoui1/frontend:latest
        ports:
        - containerPort: 8333  # Port sur lequel votre application écoute
